src/core-crm/objects/Qualtrics_Survey__c/Qualtrics_Survey__c.object-meta.xml
<CustomObject>
    <description>Contains an instance of a Qualtrics survey.</description>
    <label>Qualtrics Survey</label>
    <nameField>
        <displayFormat>QS-{000000}</displayFormat>
        <label>Qualtrics Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualtrics Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>