src/core-crm/objects/Qualtrics_Survey__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case related to the survey</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Qualtrics Surveys</relationshipLabel>
    <relationshipName>Qualtrics_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>