src/core-crm/objects/Qualtrics_Survey__c/fields/Completed_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Completed_Survey_URL__c</fullName>
    <description>The formatted URL of the completed survey populated by integration</description>
    <label>Completed Survey URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>