src/core-crm/objects/Qualtrics_Survey__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <description>Label created for contacts that exist in each batch run to help collate contacts into distribution list by Integration</description>
    <label>Distribution List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>