src/core-crm/objects/Qualtrics_Survey__c/fields/In_Progress_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Survey_URL__c</fullName>
    <description>The formatted URL of the in progress survey populated by integration</description>
    <label>In Progress Survey URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>