src/core-crm/objects/Qualtrics_Survey__c/fields/Qualtrics_Survey_Id__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Survey_Id__c</fullName>
    <description>Reference to the Qualtrics Id configured on the Engagement List Configuration</description>
    <label>Qualtrics Survey ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>