src/core-crm/objects/Qualtrics_Survey__c/fields/Staff_Assisted__c.field-meta.xml
<CustomField>
    <fullName>Staff_Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the staff assisted in completing the survey.</description>
    <label>Staff Assisted</label>
    <type>Checkbox</type>
</CustomField>