src/core-crm/objects/Qualtrics_Survey__c/fields/Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Status__c</fullName>
    <description>Driven from email send and or presence of Completed Survey URL</description>
    <label>Survey Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>