src/core-crm/objects/Qualtrics_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Survey_Status__c</columns>
    <columns>Staff_Assisted__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Development_Team</group>
        <group>Student_Success_Outreach_Manager</group>
        <group>Student_Success_Outreach_Staff</group>
        <group>System_Administrator</group>
        <group>System_Administrator_Modify_All_Data</group>
        <group>System_Administrator_Read_Only</group>
    </sharedTo>
</ListView>